# xr-desktop

./: .gitignore  .gitmodules  LICENSE  README.md
daemon/: CMakeLists.txt
daemon/src/: imu.c  imu.h  main.c  shm.c  shm.h
daemon/tools/: imu-test.c
daemon/udev/: 60-xr-glasses.rules
extension/: extension.js  metadata.json  prefs.js
extension/schemas/: org.gnome.shell.extensions.xr-desktop.gschema.xml
scripts/: dev-reload.sh  install.sh  run-daemon.sh
shaders/: world_lock.frag  world_lock.vert
shared/: ipc.h  ipc.js
